--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "joi": "^17.6.0",
+    "nestjs-pino": "^3.1.1",
     "pg": "^8.8.0",
+    "pino-http": "^8.2.0",
+    "pino-pretty": "^9.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
