--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^9.0.1",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "joi": "^17.6.0",
     "nestjs-pino": "^3.1.1",
     "pg": "^8.8.0",
