--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "migrations:generate": "npm run typeorm -- migration:generate -n",
-    "migrations:run": "npm run typeorm -- migration:run",
-    "migrations:show": "npm run typeorm -- migration:show",
-    "migrations:drop": "npm run typeorm -- schema:drop"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:show": "npm run typeorm migration:show -- -d src/server/database/dataSource.ts",
+    "migration:generate": "npm run typeorm migration:generate -- -p -d src/server/database/dataSource.ts ",
+    "migration:run": "npm run typeorm migration:run -- -d src/server/database/dataSource.ts",
+    "migration:drop": "npm run typeorm schema:drop -- -d src/server/database/dataSource.ts"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
